# dv-odoo-docker

./: .env  .gitattributes  .gitignore  deploy.py  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
config/: odoo.conf  postgresql.conf
odoo/: Dockerfile
odoo/cache/: config_cache.json
postgres/: Dockerfile  init-postgis.sh
services/: commands.py  database_creator.py  file_operations.py  module_manager.py  requirements_manager.py  startup_validator.py  traefik_configurator.py
